Added documentation and made some fixes to some of the environment initialization scripts. I will continue to improve this amazing repository to make things easier on new users

--- a/utils/giza/giza-pp/GIZA++-v2/Makefile
+++ b/utils/giza/giza-pp/GIZA++-v2/Makefile
@@ -3,7 +3,7 @@
 INSTALLDIR ?= /usr/local/bin/
 
 #CXX = g++
-
+CFLAGS_GLOBAL = -std=c++11
 CFLAGS = $(CFLAGS_GLOBAL) -Wall -Wno-parentheses
 #CFLAGS_OPT = $(CFLAGS) -O3 -DNDEBUG -DWORDINDEX_WITH_4_BYTE -O3 -DNDEBUG -DWORDINDEX_WITH_4_BYTE -ffast-math
 CFLAGS_OPT = $(CFLAGS) -O3 -funroll-loops -DNDEBUG -DWORDINDEX_WITH_4_BYTE -DBINARY_SEARCH_FOR_TTABLE -DWORDINDEX_WITH_4_BYTE
